improved cache API, box borders, top level menus, page load speed  - allow cache update on creation (updateCacheOnCreation)  - improved 'cachify' api, wrap didn't make sense anymore  - move js to bottom of page  - fixed top level menu items (with 'active' class)

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,61 +1,27 @@
 body {
+  position: relative;
   padding-top: 60px;
-  padding-bottom: 40px;
-  background: url('../images/whitey.png');
+  background: url(../images/whitey.png);
 }
 
 .nav-list {
-  padding-left: 4px !important;
-  padding-right: 4px !important;
+  padding-left: 3px !important;
+  padding-right: 1px !important;
+}
+
+.sidebar-tweets {
+  height: 580px;
+}
+
+.sidebar-nav {
+  padding-left: 11px !important;
 }
 
 .well {
-  border: 1px solid #D2d2d2 !important;
-  padding: 10px !important;
 
-  -moz-border-radius-bottomleft: 10px;
-  -webkit-border-bottom-left-radius: 10px;
-  
-  -moz-border-radius-bottomright: 10px;
-  -webkit-border-bottom-right-radius: 10px;
-  
-  -moz-border-radius-topleft: 10px;
-  -webkit-border-top-left-radius: 10px;
-
-  -moz-border-radius-topright: 10px;
-  -webkit-border-top-right-radius: 10px;
-}
-
-.gist {
-  margin: 15px 0 !important;
-}
-
-.gist-file {
-  border: none !important;
-}
-
-.gist-meta {
-  display: none !important;
-  border: 1px solid #D2d2d2 !important;
-  padding: 12px !important;
-  -moz-border-radius-bottomleft: 10px;
-  -webkit-border-bottom-left-radius: 10px;
-  -moz-border-radius-bottomright: 10px;
-  -webkit-border-bottom-right-radius: 10px;
-}
-
-.gist-data {
-  padding: 15px !important;
-  border: 1px solid #D2d2d2 !important;
-  /* border-bottom: none !important; */
-  -moz-border-radius-topleft: 10px;
-  -webkit-border-top-left-radius: 10px;
-  -moz-border-radius-topright: 10px;
-  -webkit-border-top-right-radius: 10px;
-    -moz-border-radius-bottomleft: 10px;
-  -webkit-border-bottom-left-radius: 10px;
-  -moz-border-radius-bottomright: 10px;
-  -webkit-border-bottom-right-radius: 10px;
+  -moz-box-shadow: -2px -2px 2px 2px #888;
+  -webkit-box-shadow: -2px -2px 2px 2px#888;
+  box-shadow: -2px -2px 2px 2px #888;
 }
 
 .navbar-fixed-top {
